changes to index

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <button id="color-switcher" class="color-switcher header__switcher btn" type="button" role="switch"
         aria-label="light/dark mode" aria-checked="true"></button>
       <a id="notify-trigger" class="header__trigger btn"
-        href="mailto:itsivali@gmail.com?subject=Message%20from%20your%20site">
+        href="mailto:itsivali@gmail.com?subject=Hello">
         <span class="trigger__caption">Let's Talk</span>
         <i class="ph-bold ph-chat-dots"></i>
       </a>
@@ -157,7 +157,7 @@
         </div>
         <div class="avatar__image">
           <img src="img/avatars/me.png"
-            alt="Willis Ivali - Resume of a skilled Software Engineer and SRE Engineer with experience in developing, deploying, and managing applications and infrastructures.">
+            alt="Willis Ivali - A Software Engineer and SRE Engineer with experience in developing, deploying, and managing applications and infrastructures.">
         </div>
       </div>
       <!-- data caption #1 -->
@@ -1002,7 +1002,7 @@
         <div class="teaser">
           <p class="teaser__text animate-in-up">Want to know more about me, tell me
             about your project or just to say hello?
-            <a class="text-link-bold" href="mailto:itsivali@gmail.com?subject=Message%20from%20your%20site">Drop me a
+            <a class="text-link-bold" href="mailto:itsivali@gmail.com?subject=Hello">Drop me a
               line</a>
             and I'll get back
             as soon as possible.
@@ -1035,7 +1035,7 @@
               <p class="contact-lines__title animate-in-up">Email</p>
               <p class="contact-lines__text animate-in-up">
                 <a class="text-link-bold"
-                  href="mailto:itsivali@gmail.com?subject=Message%20from%20your%20site">Let's Talk!</a>
+                  href="mailto:itsivali@gmail.com?subject=Hello">Let's Talk!</a>
               </p>
             </div>
           </div>
@@ -1057,7 +1057,7 @@
     <div class="pswp__scroll-wrap">
 
       <!-- Container that holds slides. PhotoSwipe keeps only 3 slides in DOM to save memory. -->
-      <!-- don't modify these 3 pswp__item elements, data is added later on. -->
+     
       <div class="pswp__container">
         <div class="pswp__item"></div>
         <div class="pswp__item"></div>
@@ -1068,9 +1068,7 @@
       <div class="pswp__ui pswp__ui--hidden">
 
         <div class="pswp__top-bar">
-
-          <!--  Controls are self-explanatory. Order can be changed. -->
-
+          
           <div class="pswp__counter"></div>
 
           <button class="pswp__button pswp__button--close link-s" title="Close (Esc)"></button>
