changed instagram links

--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
           <div class="socials-cards__item d-flex grid-item-s animate-card-5">
             <div class="socials-cards__card">
               <i class="ph-bold ph-instagram-logo"></i>
-              <a class="socials-cards__link" href="https://www.instagram.com/willis-ivali" target="_blank"></a>
+              <a class="socials-cards__link" href="https://www.instagram.com/willis_ivali" target="_blank"></a>
             </div>
           </div>
           <!-- socials item -->
