changes to meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Meta Tags -->
   <meta name="description"
-    content="Resume of a skilled Software Engineer and DevOps Engineer with experience in developing, deploying, and managing applications and infrastructures.">
+    content="Resume of a Software Engineer and DevOps Engineer with experience in developing, deploying, and managing applications and infrastructures.">
   <meta name="keywords"
     content="Software Engineer, DevOps Engineer, Full Stack Developer, Cloud Computing, CI/CD, Automation, Kubernetes, Docker, AWS, Azure, GCP, Python, JavaScript, Linux, Ansible, Jenkins, Git, Agile, Scrum, Microservices, Infrastructure as Code, Continuous Integration, Continuous Deployment, DevOps, SRE, Site Reliability Engineering">
   <meta name="author" content="Willis Ivali">
