changed discord link

--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
           <div class="socials-cards__item d-flex grid-item-s animate-card-5">
             <div class="socials-cards__card">
               <i class="ph-bold ph-discord-logo"></i>
-              <a class="socials-cards__link" href="https://www.discord.com/itsivali" target="_blank"></a>
+              <a class="socials-cards__link" href="https://discord.com/channels/@me" target="_blank"></a>
             </div>
           </div>
         </div>
