--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <i class="ph-bold ph-squares-four"></i>
             </a>
             <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline"
-              href="ivali.pdf">
+              href="willisivali.pdf">
               <span class="btn-caption">Download CV</span>
               <i class="ph-bold ph-download-simple"></i>
             </a>
