update LinkedIn link in index.html to point to personal profile

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   class="ph-bold ph-github-logo"></i></a>
             </li>
             <li class="socials-square__item">
-              <a class="socials-square__link btn" href="https://www.linkedin.com/" target="_blank"><i
+              <a class="socials-square__link btn" href="https://www.linkedin.com/in/itsivali" target="_blank"><i
                   class="ph-bold ph-linkedin-logo"></i></a>
             </li>
           </ul>
